# apexis

./: .config.py.swp  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.cron  LICENSE  README.md  apexis_journal.txt  config.py  docker-compose.yml  entrypoint.sh  index.py  main.ipynb  main.py  pyproject.toml  requirements.txt  scheduler.py  test_build.sh
apexis-app/: App.js  app.json  eas.json  package-lock.json  package.json
apod-app/: App.js  app.json
backend/: __init__.py  database.py  main.py  models.py
