[project]
name = "apexis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.5",
    "python-dotenv==1.2.2",
    "requests==2.32.5",
    "schedule==1.2.2",
    "slowapi==0.1.9",
    "uvicorn==0.41.0",
    "wonderwords==3.0.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]
